--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "@el173/react-native-smooch",
+  "name": "@jdoc/react-native-smooch",
   "version": "1.2.1",
   "description": "A React Native client for smooch.io",
   "main": "./lib/SmoochClient.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/el173/react-native-smooch.git"
+    "url": "https://github.com/ijdoc/react-native-smooch.git"
   },
   "author": "Hashith Karunarathne",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/el173/react-native-smooch/issues"
+    "url": "https://github.com/ijdoc/react-native-smooch/issues"
   },
-  "homepage": "https://github.com/el173/react-native-smooch",
+  "homepage": "https://github.com/ijdoc/react-native-smooch",
   "keywords": [
     "react-native",
     "smooch",
     "chat",
     "bot",
     "chat bot",
-    "smooch chat bot"
+    "smooch chat bot",
+    "sunshine conversations"
   ]
 }
